--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,10 @@ dependencies = [
     "pytest-cov>=3.0.0",
     "sphinx>=5.0.0",
     "sphinx-rtd-theme>=1.0.0",
+    "PyWavelets>=1.3.0",
+    "networkx>=2.6.0",
+    "statsmodels>=0.13.0",
+    "seaborn>=0.11.0",
 ]
 
 [project.optional-dependencies]
@@ -127,7 +131,7 @@ addopts = [
 ]
 
 [tool.coverage.run]
-source = ["evojump"]
+source = ["src/evojump"]
 omit = [
     "*/tests/*",
     "*/test_*.py",
