--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ name = "evojump"
 version = "0.1.0"
 description = "A Comprehensive Framework for Evolutionary Ontogenetic Analysis"
 readme = "README.md"
-license = {text = "MIT"}
+license = {text = "Apache-2.0"}
 authors = [
     {name = "EvoJump Development Team"},
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
